# openSatCon

./: .gitmodules  CMakeLists.txt
osc-daemon/: main.cpp  osctypes.hpp
osc-daemon/orbitalmechanics/: axistransforms.hpp  orbitalmaneuvers.hpp  planet.hpp
